# atmel-start-cmake

./: .gitignore  CMakeLists.txt  Makefile  README.md  arm-none-eabi.cmake  printer.mk
src/: CMakeLists.txt  main.c
